Support JDK 25
Replace the tools.jar based internal APIs with the public jdk.attach API,
upgrade Jetty 7 to Jetty 12 (jakarta.servlet) and update the build to
release 25. Dumper is now started with 'java -jar dumper.jar [port]'.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>